# Robot_Digital_Twin

./: CMakeLists.txt  README.md  package.xml
config/: dual_gp4.srdf  fake_controllers.yaml  gazebo_dual_gp4.urdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
launch/: b10.launch  b12.launch  b2.launch  b3.launch  b4.launch  b5.launch  b6.launch  b9.launch  blocks.launch  camera.launch  dual_gp4.launch  env.launch  fanuc.launch  fanuc_3f_gripper.launch  fanuc_g1.launch  fanuc_rviz.launch  fruit_setup.launch  g1.launch  g1_control.yaml  g1_launch.launch  g1_rviz.launch  gp4.launch  gp4_oliver.launch  gp4_rviz.launch  gp50.launch  gp50_rviz.launch  lego_mfi.launch  lego_setup.launch  lego_setup_large.launch  robot_control_3f_gripper.yaml  robot_control_6dof.yaml  single_fanuc_block_assembly.launch  single_fanuc_fruit.launch  single_fanuc_lego.launch  vis_lego.launch
moveit_launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
scripts/: cnt_bricks.py  lego_library.json  sample0.json  task_graph.json  utils.py  vis_lego.py
urdf/: block.xacro  camera.xacro  common_colours.xacro  env.xacro  (+26 more)
(+21 files in other folders)
